--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@upstash/redis": "^1.34.9",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
