--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,16 @@
     "@upstash/redis": "^1.34.9",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "drizzle-orm": "^0.44.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.0",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.24",
+    "@types/pg": "^8.15.2",
+    "drizzle-kit": "^0.31.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
