--- a/juncture-sdk/package.json
+++ b/juncture-sdk/package.json
@@ -1,21 +1,21 @@
 {
   "name": "juncture-sdk",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": ["jira", "sdk", "oauth", "integration"],
+  "author": "Jaiden Lee",
+  "license": "MIT",
+  "description": "A TypeScript SDK for integrating Jira using Juncture",
   "dependencies": {
     "axios": "^1.10.0"
   },
+  "files": ["dist"],
   "devDependencies": {
     "@types/node": "^24.0.3",
-    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
 }
