--- a/juncture-sdk/tsconfig.json
+++ b/juncture-sdk/tsconfig.json
@@ -3,11 +3,15 @@
     "target": "ES2020",
     "module": "CommonJS",
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false, 
+    "moduleResolution": "node",
   },
   "include": ["src"],
   "exclude": ["node_modules"]
